[gcix] initial revision round 2

--- a/tests/gcix-tests/gcix-tests.vcxproj
+++ b/tests/gcix-tests/gcix-tests.vcxproj
@@ -81,6 +81,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="gcix-GlobalAllocator.cpp" />
+    <ClCompile Include="gcix-SequentialBufferStore.cpp" />
     <ClCompile Include="gcix-tests.cpp" />
   </ItemGroup>
   <ItemGroup>
